- fix scrollbar showing in the middle

--- a/styles.css
+++ b/styles.css
@@ -288,6 +288,9 @@ a img{
 
         width: 65em;
         margin: 0 auto;
+
+        overflow-x: visible;
+        overflow-y: visible
     }
 
 
